prevent container overflow

--- a/components/PostContentSection/styles.module.css
+++ b/components/PostContentSection/styles.module.css
@@ -1,5 +1,6 @@
 .content {
   font-size: var(--size-medium);
+  overflow-wrap: break-word;
 }
 
 .content li + .content li {
